[tool.poetry]
name = "tidypyspark"
version = "0.0.1"
description = "dplyr for pyspark"
authors = ["Srikanth Komala sheshachala", "Suyash Garg"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
pyspark = "^3.3.1"
collections-extended = "^2.0.2"
pandas = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[tool.poetry.group.dev.dependencies]
sphinx = "~5.0.0"
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.1"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
